--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html lang="en" >
 
 <head>
 <meta charset="utf-8">
@@ -8,39 +8,28 @@
 <meta content="" name="keywords">
 <meta content="" name="description">
 
-<!-- Favicon -->
-<link th:href="@{fe/img/favicon.ico}" rel="icon">
+ <!-- Favicon -->
+    <link href="img/favicon.ico" rel="icon">
 
-<!-- Google Web Fonts -->
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link
-	href="https://fonts.googleapis.com/css2?family=Heebo:wght@400;500;600&family=Nunito:wght@600;700;800&display=swap"
-	rel="stylesheet">
+    <!-- Google Web Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Heebo:wght@400;500;600&family=Nunito:wght@600;700;800&display=swap" rel="stylesheet">
 
-<!-- Icon Font Stylesheet -->
-<link
-	href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.0/css/all.min.css"
-	rel="stylesheet">
-<link
-	href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css"
-	rel="stylesheet">
+    <!-- Icon Font Stylesheet -->
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.0/css/all.min.css" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css" rel="stylesheet">
 
-<!-- Libraries Stylesheet -->
-<link th:href="@{fe/lib/animate/animate.min.css}" rel="stylesheet">
+    <!-- Libraries Stylesheet -->
+    <link href="lib/animate/animate.min.css" rel="stylesheet">
+    <link href="lib/owlcarousel/assets/owl.carousel.min.css" rel="stylesheet">
+    <link href="lib/tempusdominus/css/tempusdominus-bootstrap-4.min.css" rel="stylesheet" />
 
-<link th:href="@{fe/lib/owlcarousel/assets/owl.carousel.min.css}"
-	rel="stylesheet">
-<link
-	th:href="@{fe/lib/tempusdominus/css/tempusdominus-bootstrap-4.min.css}"
-	rel="stylesheet" />
+    <!-- Customized Bootstrap Stylesheet -->
+    <link href="css/bootstrap.min.css" rel="stylesheet">
 
-<!-- Customized Bootstrap Stylesheet -->
-<link th:href="@{fe/css/bootstrap.min.css}" rel="stylesheet">
-
-<!-- Template Stylesheet -->
-<link th:href="@{fe/css/style.css}" rel="stylesheet">
-
+    <!-- Template Stylesheet -->
+    <link href="css/style.css" rel="stylesheet">
 </head>
 
 <body>
@@ -788,19 +777,17 @@
 
 	<!-- JavaScript Libraries -->
 	<script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
-	<script
-		src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js"></script>
-	<script th:src="@{fe/lib/wow/wow.min.js}"></script>
-	<script th:src="@{fe/lib/easing/easing.min.js}"></script>
-	<script th:src="@{fe/lib/waypoints/waypoints.min.js}"></script>
-	<script th:src="@{fe/lib/owlcarousel/owl.carousel.min.js}"></script>
-	<script th:src="@{fe/lib/tempusdominus/js/moment.min.js}"></script>
-	<script th:src="@{fe/lib/tempusdominus/js/moment-timezone.min.js}"></script>
-	<script
-		th:src="@{fe/lib/tempusdominus/js/tempusdominus-bootstrap-4.min.js}"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="lib/wow/wow.min.js"></script>
+    <script src="lib/easing/easing.min.js"></script>
+    <script src="lib/waypoints/waypoints.min.js"></script>
+    <script src="lib/owlcarousel/owl.carousel.min.js"></script>
+    <script src="lib/tempusdominus/js/moment.min.js"></script>
+    <script src="lib/tempusdominus/js/moment-timezone.min.js"></script>
+    <script src="lib/tempusdominus/js/tempusdominus-bootstrap-4.min.js"></script>
 
-	<!-- Template Javascript -->
-	<script th:src="@{fe/js/main.js}"></script>
+    <!-- Template Javascript -->
+    <script src="js/main.js"></script>
 </body>
 
 </html>
