--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 			<a href="" class="navbar-brand p-0">
 				<h1 class="text-primary m-0">
 					<i class="fa fa-map-marker-alt me-3"></i>VIVUVUI
-				</h1> <!-- <img th:src="@{fe/img/logo.png}" alt="Logo"> -->
+				</h1> <!-- <img src="img/logo.png" alt="Logo"> -->
 			</a>
 			<button class="navbar-toggler" type="button"
 				data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
@@ -93,7 +93,7 @@
 				<div class="navbar-nav ms-auto py-0">
 					<a href="/" class="nav-item nav-link">Trang chủ</a> 
 					
-					<a th:href="@{/about}" class="nav-item nav-link">Giới thiệu</a>
+					<a href="about.html" class="nav-item nav-link">Giới thiệu</a>
 					
 					<a href="#" class="nav-item nav-link">Dịch vụ</a>
 					<a href="#" class="nav-item nav-link">Phổ biến</a>
@@ -101,7 +101,7 @@
 					<a href="#" class="nav-item nav-link">Phản hồi</a>
 					<a href="#" class="nav-item nav-link">Liên hệ</a>
 				</div>
-				<a th:href="@{/login}" class="btn btn-primary rounded-pill py-2 px-4">Đăng nhập</a>
+				<a href="login.html" class="btn btn-primary rounded-pill py-2 px-4">Đăng nhập</a>
 			</div>
 			
 			
@@ -139,7 +139,7 @@
 					style="min-height: 400px;">
 					<div class="position-relative h-100">
 						<img class="img-fluid position-absolute w-100 h-100"
-							th:src="@{fe/img/about.jpg}" alt="" style="object-fit: cover;">
+							src="img/about.jpg" alt="" style="object-fit: cover;">
 					</div>
 				</div>
 				<div class="col-lg-6 wow fadeInUp" data-wow-delay="0.3s">
@@ -316,21 +316,21 @@
                     <div class="row g-3">
                         <div class="col-lg-12 col-md-12 wow zoomIn" data-wow-delay="0.1s">
                             <a class="position-relative d-block overflow-hidden" href="">
-                                <img class="img-fluid" th:src="@{fe/img/destination-1.jpg}" alt="">
+                                <img class="img-fluid" src="img/destination-1.jpg" alt="">
                                 <div class="bg-white text-danger fw-bold position-absolute top-0 start-0 m-3 py-1 px-2">30% OFF</div>
                                 <div class="bg-white text-primary fw-bold position-absolute bottom-0 end-0 m-3 py-1 px-2">Nha Trang</div>
                             </a>
                         </div>
                         <div class="col-lg-6 col-md-12 wow zoomIn" data-wow-delay="0.3s">
                             <a class="position-relative d-block overflow-hidden" href="">
-                                <img class="img-fluid" th:src="@{fe/img/destination-2.jpg}" alt="">
+                                <img class="img-fluid" src="img/destination-2.jpg" alt="">
                                 <div class="bg-white text-danger fw-bold position-absolute top-0 start-0 m-3 py-1 px-2">25% OFF</div>
                                 <div class="bg-white text-primary fw-bold position-absolute bottom-0 end-0 m-3 py-1 px-2">Hạ Long</div>
                             </a>
                         </div>
                         <div class="col-lg-6 col-md-12 wow zoomIn" data-wow-delay="0.5s">
                             <a class="position-relative d-block overflow-hidden" href="">
-                                <img class="img-fluid" th:src="@{fe/img/destination-3.jpg}" alt="">
+                                <img class="img-fluid" src="img/destination-3.jpg" alt="">
                                 <div class="bg-white text-danger fw-bold position-absolute top-0 start-0 m-3 py-1 px-2">35% OFF</div>
                                 <div class="bg-white text-primary fw-bold position-absolute bottom-0 end-0 m-3 py-1 px-2">Vũng Tàu</div>
                             </a>
@@ -339,7 +339,7 @@
                 </div>
                 <div class="col-lg-5 col-md-6 wow zoomIn" data-wow-delay="0.7s" style="min-height: 350px;">
                     <a class="position-relative d-block h-100 overflow-hidden" href="">
-                        <img class="img-fluid position-absolute w-100 h-100" th:src="@{fe/img/destination-4.jpg}" alt="" style="object-fit: cover;">
+                        <img class="img-fluid position-absolute w-100 h-100" src="img/destination-4.jpg" alt="" style="object-fit: cover;">
                         <div class="bg-white text-danger fw-bold position-absolute top-0 start-0 m-3 py-1 px-2">20% OFF</div>
                         <div class="bg-white text-primary fw-bold position-absolute bottom-0 end-0 m-3 py-1 px-2">Huế</div>
                     </a>
@@ -362,7 +362,7 @@
 				<div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
 					<div class="package-item">
 						<div class="overflow-hidden">
-							<img class="img-fluid" th:src="@{fe/img/package-1.jpg}" alt="">
+							<img class="img-fluid" src="img/package-1.jpg" alt="">
 						</div>
 						<div class="d-flex border-bottom">
 							<small class="flex-fill text-center border-end py-2"><i
@@ -395,7 +395,7 @@
 				<div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
 					<div class="package-item">
 						<div class="overflow-hidden">
-							<img class="img-fluid" th:src="@{fe/img/package-2.jpg}" alt="">
+							<img class="img-fluid" src="img/package-2.jpg" alt="">
 						</div>
 						<div class="d-flex border-bottom">
 							<small class="flex-fill text-center border-end py-2"><i
@@ -429,7 +429,7 @@
 				<div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.5s">
 					<div class="package-item">
 						<div class="overflow-hidden">
-							<img class="img-fluid" th:src="@{fe/img/package-3.jpg}" alt="">
+							<img class="img-fluid" src="img/package-3.jpg" alt="">
 						</div>
 						<div class="d-flex border-bottom">
 							<small class="flex-fill text-center border-end py-2"><i
@@ -616,7 +616,7 @@
 			<div class="owl-carousel testimonial-carousel position-relative">
 				<div class="testimonial-item bg-white text-center border p-4">
 					<img class="bg-white rounded-circle shadow p-1 mx-auto mb-3"
-						th:src="@{fe/img/testimonial-1.jpg}"
+						src="img/testimonial-1.jpg"
 						style="width: 80px; height: 80px;">
 					<h5 class="mb-0">Dương Ngọc Điệp</h5>
 					<p>Huế, Việt Nam</p>
@@ -628,7 +628,7 @@
 				</div>
 				<div class="testimonial-item bg-white text-center border p-4">
 					<img class="bg-white rounded-circle shadow p-1 mx-auto mb-3"
-						th:src="@{fe/img/testimonial-2.jpg}"
+						src="img/testimonial-2.jpg"
 						style="width: 80px; height: 80px;">
 					<h5 class="mb-0">Đoàn Phúc</h5>
 					<p>Đà Nẵng, Việt Nam</p>
@@ -640,7 +640,7 @@
 				</div>
 				<div class="testimonial-item bg-white text-center border p-4">
 					<img class="bg-white rounded-circle shadow p-1 mx-auto mb-3"
-						th:src="@{fe/img/testimonial-3.jpg}"
+						src="img/testimonial-3.jpg"
 						style="width: 80px; height: 80px;">
 					<h5 class="mb-0">John Doe</h5>
 					<p>New York, USA</p>
@@ -652,7 +652,7 @@
 				</div>
 				<div class="testimonial-item bg-white text-center border p-4">
 					<img class="bg-white rounded-circle shadow p-1 mx-auto mb-3"
-						th:src="@{fe/img/testimonial-4.jpg}"
+						src="img/testimonial-4.jpg"
 						style="width: 80px; height: 80px;">
 					<h5 class="mb-0">Bảo Long</h5>
 					<p>Hồ Chí Minh, Việt Nam</p>
@@ -709,27 +709,27 @@
 					<div class="row g-2 pt-2">
 						<div class="col-4">
 							<img class="img-fluid bg-light p-1"
-								th:src="@{fe/img/package-1.jpg}" alt="">
+								src="img/package-1.jpg" alt="">
 						</div>
 						<div class="col-4">
 							<img class="img-fluid bg-light p-1"
-								th:src="@{fe/img/package-2.jpg}" alt="">
+								src="img/package-2.jpg" alt="">
 						</div>
 						<div class="col-4">
 							<img class="img-fluid bg-light p-1"
-								th:src="@{fe/img/package-3.jpg}" alt="">
+								src="img/package-3.jpg" alt="">
 						</div>
 						<div class="col-4">
 							<img class="img-fluid bg-light p-1"
-								th:src="@{fe/img/package-2.jpg}" alt="">
+								src="img/package-2.jpg" alt="">
 						</div>
 						<div class="col-4">
 							<img class="img-fluid bg-light p-1"
-								th:src="@{fe/img/package-3.jpg}" alt="">
+								src="img/package-3.jpg" alt="">
 						</div>
 						<div class="col-4">
 							<img class="img-fluid bg-light p-1"
-								th:src="@{fe/img/package-1.jpg}" alt="">
+								src="img/package-1.jpg" alt="">
 						</div>
 					</div>
 				</div>
